<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="br.com.tsmweb.inventapp.common.binding.CheckedBinding" />

        <variable
            name="patrimony"
            type="br.com.tsmweb.inventapp.features.patrimony.binding.PatrimonyBinding" />
    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:elevation="4dp"
            android:theme="@style/MaterialTheme.AppBarOverlay"
            app:popupTheme="@style/MaterialTheme.PopupOverlay" />

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilCode"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtCode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/form_label_code"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:text="@={patrimony.code}"
                        android:textSize="14sp"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tilCode">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/form_label_name"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:text="@={patrimony.name}"
                        android:textSize="14sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/CustomExposedDropdownMenu"
                    android:id="@+id/tilDependency"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/form_label_dependency"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tilName">

                    <AutoCompleteTextView
                        android:id="@+id/edtDependency"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:text="@={patrimony.dependency}"
                        android:textSize="14sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <RadioGroup
                    android:id="@+id/rgStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:baselineAligned="false"
                    android:checkedButton="@={CheckedBinding.statusTypeToButtonId(patrimony.status)}"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tilDependency">

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/rbStatusActive"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/form_label_status_active" />

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/rbStatusDepreciated"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/form_label_status_depreciated" />

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/rbStatusInactive"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/form_label_status_inactive" />

                </RadioGroup>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnSave"
                    style="?buttonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/save"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/rgStatus" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </androidx.appcompat.widget.LinearLayoutCompat>

</layout>