<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>

        <variable
            name="patrimony"
            type="br.com.tsmweb.inventapp.features.patrimony.binding.PatrimonyBinding" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:elevation="4dp"
            android:theme="@style/MaterialTheme.AppBarOverlay"
            app:popupTheme="@style/MaterialTheme.PopupOverlay" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txtName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="4"
                    android:text="@{patrimony.name}"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@sample/patrimonies.json/data/name" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/lblCode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/label_code"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtName" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txtCode"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@{patrimony.code}"
                    android:textSize="14sp"
                    android:textStyle="italic"
                    app:layout_constraintBottom_toBottomOf="@+id/lblCode"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/lblCode"
                    app:layout_constraintTop_toTopOf="@+id/lblCode"
                    tools:text="@sample/patrimonies.json/data/code" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/lblDependency"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/label_dependency"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/lblCode" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txtDependency"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@{patrimony.dependency}"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="@+id/lblDependency"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/lblDependency"
                    app:layout_constraintTop_toTopOf="@+id/lblDependency"
                    tools:text="@sample/patrimonies.json/data/dependency" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/lblStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/label_status"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/lblDependency" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txtStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:background="@{patrimony.status}"
                    android:text="@{patrimony.status}"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="@+id/lblStatus"
                    app:layout_constraintStart_toEndOf="@+id/lblStatus"
                    app:layout_constraintTop_toTopOf="@+id/lblStatus"
                    tools:text="@sample/patrimonies.json/data/status" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </LinearLayout>

</layout>